k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # --- [QUAN TRỌNG] CHÌA KHÓA ĐỂ TẢI ẢNH TỪ AWS ---
      # (Phải đặt ngang hàng với containers, KHÔNG được đặt bên trong)
      imagePullSecrets:
        - name: regcred

      containers:
        - name: backend
          # 👇 [SỬA TỰ ĐỘNG] Dùng biến để Terraform điền URL ECR mới vào
          image: latuss/dolciluxe-backend:latest
          ports:
            - containerPort: 8080
          
          # --- Biến môi trường (Env) ---
