k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  # LoadBalancer sẽ xin AWS cấp cho 1 cái Public IP (truy cập từ internet)
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80       # Port người dùng truy cập
      targetPort: 80 # Port của Nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2 # Chạy 2 bản sao để đảm bảo không sập
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          # --- THAY IMAGE CỦA BẠN VÀO ĐÂY ---
          image: 357343206694.dkr.ecr.us-east-1.amazonaws.com/dolciluxe-frontend:v2
          ports:
            - containerPort: 80
